refactor: 将很多只需要实例化一次的类写成了静态类+init方法的形式，并且重命名了一些文件让它看起来更清晰